# cxx-pandora

./: .gitignore  .gitmodules  README.md  clang-format  sig_seg.cpp  t4.cpp  test.cpp  test1.cpp  test3.c  test3.cpp  tmp.cpp
demos/: .clang-format  CMakeLists.txt
demos/absl/: CMakeLists.txt  StrJoin.md  absl_demo.cpp
demos/absl/status/: CMakeLists.txt  status.cpp
demos/absl/string/: CMakeLists.txt  StrJoin.md  string.cpp
demos/ace/: test.cpp
demos/ace/acceptor/: acceptor.cpp  acceptor_input.cpp  acceptor_queue.cpp  acceptor_task.cpp
demos/ace/cached_allocator/: CMakeLists.txt  main.cpp
demos/ace/datagram/: client.cpp  server.cpp
demos/ace/mem_map/: hello.txt  map_file.cpp
demos/ace/reactor/: ev_input_accept.cpp  ev_signal.cpp
demos/ace/service/: config_cil.cpp  main.cpp  service.cpp  service.h  svc.conf
demos/ace/service_config/: README.md  my_dll.cpp  svc.conf  test_dynamic_config.cpp  ya_my_dll.cpp
demos/ace/stream/: CMakeLists.txt  client.cpp  server.cpp
demos/ace/sync/: ace_barrier.cpp  ace_token.cpp  ace_tss.cpp  thread.cpp  thread_lck_adapter.cpp  thread_manager.cpp  thread_mux.cpp
demos/ace/timer/: main.cpp
demos/alg_set/: CMakeLists.txt  main.cpp
demos/boardcast/: client.c  server.c
demos/boost/: CMakeLists.txt
demos/boost/alg/: main.cpp
demos/boost/bccl/: main.cpp
demos/boost/concept/: custom_concept.cpp  main.cpp
demos/boost/di/: boost_di.cpp  di_exp.cpp
demos/boost/filesystem/: CMakeLists.txt  fs.cpp
demos/boost/format/: main.cpp
demos/boost/multi_index/: main.cpp
demos/boost/pp/: README.md  arithmetic.cpp  base.cpp  control.cpp  expx.cpp  is_integral.cpp  macro-meta.cc  macro.cpp  sample1.cpp  sample2.cpp  tiny_size.h  tuple.cpp
demos/boost/range/: README.md  adaptor_transformed.cpp  adaptor_transformed1.cpp  adjacent_filterx-function.cpp  any_range.cpp  filter_function.cpp  make_filter_iterator.cpp  numeric_range.cpp  string_conversions.cpp
demos/boost/safe_numerics/: main.cpp
demos/boost/trim/: main.cpp
demos/cast/: CMakeLists.txt  READMD.md  const_cast.cpp  dynamic_cast.cpp  reinterpret_cast.cpp  static_cast.cpp
demos/cmake-func/cmake_parse_arguments/: CMakeLists.txt
demos/const_expr/: CMakeLists.txt  main.cpp
demos/coroutine/: CMakeLists.txt  main.cpp
demos/cpprestsdk/: README.md  client.cpp
demos/cpprestsdk/pplx/: README.md  task.cpp
demos/cpr/: CMakeLists.txt  main.cpp
demos/debug/: gdb_signals.c
demos/dlopen_cls/: main.cpp  polygon.hpp  triangle.cpp
demos/fmt/: main.cpp
demos/folly/: fbstring.cpp
demos/folly/future/: README.md
demos/fs/: CMakeLists.txt  main.cpp
demos/func/: func_ret.c
demos/grpc/cmake/: common.cmake
demos/grpc/compression/: CMakeLists.txt  Makefile
demos/grpc/helloworld/: .gitignore  CMakeLists.txt  Makefile
demos/grpc/keyvaluestore/: CMakeLists.txt
demos/grpc/load_balancing/: CMakeLists.txt  Makefile
demos/grpc/metadata/: CMakeLists.txt  Makefile
demos/grpc/route_guide/: CMakeLists.txt  Makefile  helper.cc  route_guide_callback_server.cc
demos/jsoncpp/: CMakeLists.txt  main.cpp
demos/jsonrpc/: README.md  ts.cpp
demos/leveldb/: CMakeLists.txt  main.cpp
demos/linux/: CMakeLists.txt  readdir_test.c
demos/linux/functions/: clone_exp.c
demos/linux/hash/: CMakeLists.txt  hash.h  hashtable.h  list.h  main.c
demos/linux/list/: list.h  main.c
demos/linux/netlink/: netlink_example.c
demos/linux/sample/: CMakeLists.txt  main.cpp
demos/linux/tss/: main.c
demos/markup/: CMakeLists.txt  Markup.cpp  bl_markup.cpp  bl_markup.h  main.cpp
demos/multicast/: client.c  server.c
demos/nbd/: README.md  reads-and-writes.c
demos/nlohmann_json/: main.cpp
demos/openssl/: CMakeLists.txt  README.md  base64.cpp  evp_cipher.cpp  evp_digest.cpp  evp_encode.cpp  main.cpp
demos/regex/: regex.cpp
demos/s3/: CMakeLists.txt  main.cpp
demos/so/: README.md  get_val.c  set_val.c  st.c  st.h
demos/soci/: CMakeLists.txt  main.cpp  test.cpp
demos/ssl/sm2/: EVP_sm2_enc_and_dec.c  EVP_sm2_sign_and_verify.c  README.md  gmssl.cpp  sm2_cst_asn.cpp  sm2_dj.cpp  sm2_gen_enc.cpp  sm2_pri_hex.cpp  sm2_pub_hex.cpp
demos/test/: CMakeLists.txt  README.md  sample1.cpp  sample1.h  sample1_unittest.cpp
demos/traits/: CMakeLists.txt  main.cpp  tr_conjunction_v.h  tr_enable_if.h  tr_is_valid.h
demos/version_test/: Makefile  main.c  mylib.c
demos/version_test/v1/: add.c
demos/version_test/v2/: add.c
demos/win/dllmain/: MyDll.cpp  MyDll.h  main.cpp
demos/yajl/: README.md  main.c  parse_config.c  reformatting.c
idioms/: main.cpp  (+10 more)
idioms/design-patterns/: CMakeLists.txt  type_erase.cpp
idioms/design-patterns/behavioral-patterns/: CMakelists.txt  test.cpp  visitor.cpp  visitor_double_dispatch.cpp
idioms/design-patterns/creational-patterns/: abstract_factory.cpp
(+436 files in other folders)
