cmake_minimum_required(2.8 ... VERSION 3.16.3)
project(demos)


set(CMAKE_CXX_STANDARD 17)

#add_subdirectory(fs)
#add_subdirectory(jsoncpp)

#add_subdirectory(openssl)
#add_subdirectory(linux)
#add_subdirectory(markup)
#add_subdirectory(alg_set)
#add_subdirectory(const_expr)
#add_subdirectory(s3)
#add_subdirectory(boost)
#add_subdirectory(soci)
#add_subdirectory(leveldb)

#add_subdirectory(absl)
#add_subdirectory(traits)
#add_subdirectory(cast)
#add_subdirectory(coroutine)
#add_subdirectory(cpr)

#add_subdirectory(ace)

